--- a/LeastSquares.Rmd
+++ b/LeastSquares.Rmd
@@ -415,7 +415,7 @@ frame[,1:3] = round(frame[,1:3], digits = 3)
 colnames(frame) = c("$R^{2}_{cnt}$", "$R^{2}_{casual}$", "$R^{2}_{registered}$")
 
 # Table 1
-knitr::kable(frame, digits = 3, caption = "R-squared values for linear regression of each of value of $n$, maximum power of polynomial for `hour`, including $x_{1}, $x_{2}$, and $x_{9}$", escape = FALSE)
+knitr::kable(frame, digits = 3, caption = "R-squared values for linear regression of each of value of $n$, maximum power of polynomial for `hour`, including $x_{1}, x_{2}$, and $x_{9}$", escape = FALSE)
 ```
 
 **Table 1** shows the values of R-squared regressed upon the dependent variables `cnt`, `casual`, and `registered` for each value of $n$ for values of 1 to 15. For `cnt` and `registered`, a good value of $n$ appears to be 7. $n = 7$ gives a huge increase in R-squared over $n = 6$ for `cnt` and `registered`. Only small increases of R-squared are seen for values of $n$ above 7 for `cnt` and `registered`. Although these increases are still statistically significant, it is not a good idea to have very high order polynomials as such a regression is likely to overfit the data. For example, very high order polynomials may give poor predictions for data in 2013 or beyond. For `casual`, a good value of $n$ appears to be 3. Only small increases of R-squared are seen for values of $n$ above 3 for `casual`.
@@ -612,7 +612,7 @@ $y_{1} = \beta_{0} + \beta_{1}x_{1} + \beta_{2}x_{2} + \beta_{3}x_{4} + \beta_{4
 
 $y_{3} = \beta_{0} + \beta_{1}x_{1} + \beta_{2}x_{2} + \beta_{3}x_{4} + \beta_{4}x_{4}^{2} + \beta_{5}x_{4}^{3} + \beta_{6}x_{4}^{4} + \beta_{7}x_{4}^{5} + \beta_{8}x_{4}^{6} + \beta_{9}x_{4}^{7} + \beta_{10}x_{9}$
 
-The solution to $Ax = b$ for $y_{1}$ is:
+The solution to $Ax = b$ for $b = y_{1}$ is:
 
 
 \[
@@ -637,7 +637,7 @@ x =
   \end{bmatrix}
 \]
 
-The solution to $Ax = b$ for $y_{3}$ is:
+The solution to $Ax = b$ for $b = y_{3}$ is:
 
 \[
 x =
