--- a/LeastSquares.tex
+++ b/LeastSquares.tex
@@ -319,7 +319,7 @@ value of \(n\).
 \begin{longtable}[]{@{}lrrr@{}}
 \caption{R-squared values for linear regression of each of value of
 \(n\), maximum power of polynomial for \texttt{hour}, including
-\$x\_\{1\}, \(x_{2}\), and \(x_{9}\)}\tabularnewline
+\(x_{1}, x_{2}\), and \(x_{9}\)}\tabularnewline
 \toprule
 & \(R^{2}_{cnt}\) & \(R^{2}_{casual}\) &
 \(R^{2}_{registered}\)\tabularnewline
@@ -416,11 +416,11 @@ expr & min & lq & mean & median & uq & max & neval\tabularnewline
 expr & min & lq & mean & median & uq & max & neval\tabularnewline
 \midrule
 \endhead
-design\_matrix() & 19.583 & 21.756 & 34.720 & 27.329 & 37.945 & 163.543
+design\_matrix() & 19.032 & 20.041 & 30.781 & 21.834 & 29.155 & 212.279
 & 100\tabularnewline
-design\_matrix\_Cpp() & 7.528 & 8.113 & 12.063 & 9.119 & 11.330 & 43.002
+design\_matrix\_Cpp() & 7.474 & 7.972 & 12.173 & 8.578 & 9.948 & 193.108
 & 100\tabularnewline
-model.matrix.lm() & 19.591 & 23.590 & 41.094 & 31.195 & 41.902 & 243.177
+model.matrix.lm() & 19.072 & 20.411 & 28.093 & 22.914 & 30.381 & 93.841
 & 100\tabularnewline
 \bottomrule
 \end{longtable}
@@ -654,10 +654,10 @@ expr & min & lq & mean & median & uq & max & neval\tabularnewline
 expr & min & lq & mean & median & uq & max & neval\tabularnewline
 \midrule
 \endhead
-normal\_equations(A, b) & 6.047 & 6.572 & 9.275 & 7.478 & 9.326 & 28.770
+normal\_equations(A, b) & 5.954 & 6.286 & 7.70 & 6.737 & 7.517 & 22.960
 & 100\tabularnewline
-normal\_equations\_Cpp(A, b) & 2.244 & 2.428 & 2.830 & 2.648 & 3.094 &
-7.003 & 100\tabularnewline
+normal\_equations\_Cpp(A, b) & 2.216 & 2.342 & 2.55 & 2.469 & 2.744 &
+4.525 & 100\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -694,9 +694,9 @@ expr & min & lq & mean & median & uq & max & neval\tabularnewline
 expr & min & lq & mean & median & uq & max & neval\tabularnewline
 \midrule
 \endhead
-qr.solve(A, b) & 5.539 & 6.440 & 9.661 & 7.321 & 9.834 & 32.641 &
+qr.solve(A, b) & 5.250 & 5.490 & 6.873 & 5.78 & 6.409 & 16.309 &
 100\tabularnewline
-qr\_solve\_Cpp(A, b) & 5.380 & 6.324 & 9.964 & 7.442 & 9.713 & 49.032 &
+qr\_solve\_Cpp(A, b) & 5.313 & 5.499 & 6.077 & 5.71 & 6.110 & 15.186 &
 100\tabularnewline
 \bottomrule
 \end{longtable}
@@ -734,10 +734,10 @@ expr & min & lq & mean & median & uq & max & neval\tabularnewline
 expr & min & lq & mean & median & uq & max & neval\tabularnewline
 \midrule
 \endhead
-svd\_solve(A, b) & 11.051 & 13.403 & 22.990 & 16.567 & 26.835 & 91.955 &
+svd\_solve(A, b) & 9.382 & 9.775 & 11.454 & 10.131 & 10.905 & 26.732 &
 100\tabularnewline
-svd\_solve\_Cpp(A, b) & 8.607 & 11.160 & 17.828 & 13.372 & 21.892 &
-45.689 & 100\tabularnewline
+svd\_solve\_Cpp(A, b) & 8.117 & 8.324 & 8.778 & 8.619 & 9.017 & 11.376 &
+100\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -760,16 +760,16 @@ expr & min & lq & mean & median & uq & max & neval\tabularnewline
 expr & min & lq & mean & median & uq & max & neval\tabularnewline
 \midrule
 \endhead
-normal\_equations\_Cpp(A, b) & 3.990 & 4.554 & 6.474 & 4.898 & 6.479 &
-46.761 & 100\tabularnewline
-qr.solve(A, b) & 10.617 & 12.831 & 23.327 & 17.289 & 23.969 & 253.415 &
+normal\_equations\_Cpp(A, b) & 3.838 & 3.980 & 4.201 & 4.058 & 4.429 &
+5.403 & 100\tabularnewline
+qr.solve(A, b) & 9.968 & 10.575 & 14.597 & 11.218 & 13.927 & 168.261 &
 100\tabularnewline
-qr\_solve\_Cpp(A, b) & 12.097 & 13.886 & 21.197 & 16.199 & 23.211 &
-100.417 & 100\tabularnewline
-svd\_solve(A, b) & 20.816 & 25.097 & 40.080 & 31.263 & 40.285 & 139.866
-& 100\tabularnewline
-svd\_solve\_Cpp(A,b) & 18.233 & 21.014 & 31.122 & 25.653 & 33.904 &
-127.162 & 100\tabularnewline
+qr\_solve\_Cpp(A, b) & 11.427 & 11.920 & 12.717 & 12.292 & 13.018 &
+21.020 & 100\tabularnewline
+svd\_solve(A, b) & 19.954 & 20.799 & 23.806 & 22.417 & 27.291 & 34.312 &
+100\tabularnewline
+svd\_solve\_Cpp(A,b) & 17.413 & 17.957 & 18.833 & 18.477 & 19.313 &
+26.481 & 100\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -794,7 +794,7 @@ Recall that \(y_{1}\) = \texttt{casual}, \(y_{3}\) = \texttt{cnt},
 
 \(y_{3} = \beta_{0} + \beta_{1}x_{1} + \beta_{2}x_{2} + \beta_{3}x_{4} + \beta_{4}x_{4}^{2} + \beta_{5}x_{4}^{3} + \beta_{6}x_{4}^{4} + \beta_{7}x_{4}^{5} + \beta_{8}x_{4}^{6} + \beta_{9}x_{4}^{7} + \beta_{10}x_{9}\)
 
-The solution to \(Ax = b\) for \(y_{1}\) is:
+The solution to \(Ax = b\) for \(b = y_{1}\) is:
 
 \[
 x =
@@ -818,7 +818,7 @@ x =
   \end{bmatrix}
 \]
 
-The solution to \(Ax = b\) for \(y_{3}\) is:
+The solution to \(Ax = b\) for \(b = y_{3}\) is:
 
 \[
 x =
