--- a/LeastSquares_Final.tex
+++ b/LeastSquares_Final.tex
@@ -115,7 +115,7 @@ since the \texttt{day.csv} is simply just a sumamry of the
 There are 14 different variables that are in this dataset that are potentially of interest. Two variables are not useful and immediately thrown out: \texttt{instant} (this is simply the row number of the dataset) and \texttt{dteday} (date of the year).
 
 \hypertarget{Dataset}{%
-\subsection{2. Dataset}\label{Dataset}}
+\subsection{2.1 Dataset}\label{Dataset}}
 Denote \(x_{n}\) as plausible independent variables and denote \(y_{n}\)
 as plausible dependent variables.
 
@@ -166,7 +166,7 @@ the independent variables. Also, we will try some principal components
 analysis (PCA) and k-nearest neighbors (kNN) with these variables.
 
 \hypertarget{data-analysis}{%
-\subsection{2. Data Analysis}\label{data-analysis}}
+\subsection{2.2 Data Analysis}\label{data-analysis}}
 
 Preliminary data analysis shows that the \texttt{hour} is by far the most important independent variable for explaining the variation in the dependent variables. Thus, it is important to know how exactly the \texttt{hour} variable interacts with \texttt{registered}, \texttt{casual}, and \texttt{cnt}.
 
